syntax = "proto3";
option go_package = "github.com/argoproj/argo-cd/server/settings";

// Settings Service
//
// Settings Service API retrives ArgoCD settings 
package cluster;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

// SettingsQuery is a query for ArgoCD settings
message SettingsQuery {
}

// ClaimsActionMap holds a list of claim actions associated with a claim resource.
message ClaimsActionMap {
    string key = 1;
    repeated string values = 2;
}

message Settings {
    string url = 1 [(gogoproto.customname) = "URL"];
    DexConfig dexConfig = 2;
    OIDCConfig oidcConfig = 3 [(gogoproto.customname) = "OIDCConfig"];
    ClaimsActionMap rbac = 4 [(gogoproto.nullable) = false, (gogoproto.customname) = "RBAC"];
}

message DexConfig {
    repeated Connector connectors = 1;
}

message Connector {
    string name = 1;
    string type = 2;
}

message OIDCConfig {
    string name = 1;
    string issuer = 2;
    string clientID = 3 [(gogoproto.customname) = "ClientID"];
}

// SettingsService 
service SettingsService {

    // Get returns ArgoCD settings
    rpc Get(SettingsQuery) returns (Settings) {
		option (google.api.http).get = "/api/v1/settings";
	}

}
